Hooked up the master scrollbar to the individual displays. Working well without any signs of bugs so far. Configurations still working too! Ref #3

--- a/nodejs-timelapse-project/stylesheet.css
+++ b/nodejs-timelapse-project/stylesheet.css
@@ -44,10 +44,6 @@ header {
     align-self: flex-end;
 }
 
-.slider {
-    width: 100%;
-}
-
 .controls {
     position: -webkit-sticky; /* Safari */
     position: sticky;
